Update Java example to use JEP 330
Signed-off-by: GitHub <noreply@github.com>