@@ -7,8 +7,8 @@ generation in other languages since.
 
 I've been wanting to try Java again now that development has picked back up again. I've only ever used Java 8.
 
-# JEP 445 heckery
+# JEP 445 and 330 heckery
 
 ```
-./_lib/jdk-21/bin/java --source 21 --enable-preview scratch/languages/jvm/java/main.java
+./main
 ```
