@@ -1,3 +1,5 @@
+#!/usr/bin/env -S java --enable-preview --source 21
+
 void main() {
-    System.out.println("Hello, World!");
+    System.out.println("This is Java Script! 👿");
 }
